# EventCalendar

./: .gitignore  README.md  fingerprint-icon-signature-concept-for-password-encryption-to-protect-information-vector.xcf  fingerprint_9967690.c  p.py  qq.txt
3D/: lcd-panel-Body.stl  lcd-panel.FCStd  lcd-panel.FCStd1
sch/ev_cal/: KS_6_ADI.step  ev_cal.kicad_pcb  ev_cal.kicad_prl  ev_cal.kicad_pro  ev_cal.kicad_sch  fp-lib-table  lcd.kicad_sch  sym-lib-table  (+1 more)
soft/firmware/main/: CMakeLists.txt  ILI9327_Shield.h  R503.cpp  R503.h  Touchscreen.cpp  actions.txt  activity.cpp  activity.h  animation.cpp  animation.h  bg_image.cpp  bg_image.h  box_draw.cpp  box_draw.h  buttons.cpp  buttons.h  cdn.bat  cdn_gen.py  challenge.tz.txt  challenge_list.h  challenge_mgr.cpp  challenge_mgr.h  common.cpp  common.h  doors_mgr.cpp  doors_mgr.h  estring.h  fazzy_match.h  grid_mgr.cpp  grid_mgr.h  hadrware.cpp  hadrware.h  icons.h  idf_component.yml  input_hw.h  input_hw_fg.cpp  input_hw_fg.h  input_hw_touch.cpp  input_hw_touch.h  interactive.cpp  (+31 more)
soft/firmware/main/challenges/: PyatnashkiGame.cpp.txt  TileGame.cpp  ch_equest.cpp  ch_game15.cpp  ch_quest.cpp  ch_tilegame.cpp  equest.cpp  equest.h  tg_solver.cpp
soft/firmware/main/docs/: actions.txt  close.ico.txt  close.py  hlp.txt  icons8-help-32.c  keyboard.txt  sgen.py  syms.bkp.txt  syms.txt
soft/firmware/main/icons/: close_ico.cpp  fg_ico.cpp  help_ico.cpp
soft/firmware/main/tar_tewst/: tar_tewst.cpp  tar_tewst.sln  tar_tewst.vcxproj  tar_tewst.vcxproj.filters
soft/firmware/main/web/: add_game_user.html  admin.html  edit_user.html  fg_editor.html  fg_viewer.html  jslib.js  load_gifts.html  loglevel.html  message.html  open_door.html  set_bg_images.html  set_challenge.html  setup.html  start_game.html  styles.css  text_lib.js  update.html
soft/firmware/main/zip/: zip_streamer.cpp  zip_streamer.h  zip_streamer.priv.h
spice/: sch.asc  tl431-1.asy
test/: b.py
text_draw/: colornames.js  fazzy_match.h  jslib.js  styles.css  test.html  text_lib.js  tz.txt
(+74 files in other folders)
